Fix: Adjusted the CSS for the logo in the top nav bar so that it doesn't get cut off on iphone 5 sized screens.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -129,6 +129,15 @@ nav {
     display: none;
 }
 @media screen and (max-width: 768px) {
+
+.logo {
+    height: auto;
+}
+
+.logo-img {
+    width: 100%;
+    height: auto;
+}
 .showMobile {
     display: initial;
 }
